syntax = "proto3";
package main;
option go_package=".;communication";

import "google/protobuf/timestamp.proto";
import "communication/file_service.proto";
import "communication/contract.proto";
import "communication/stripe.proto";

message UserRegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;

    uint32 user_type = 5;

    string first_name = 4;
    string last_name = 6;
    string phone_number = 7;

    DOBEntity dob = 8; 
    
    bool worker_requested = 9;
    bool buyer_requested = 10;
}

message UserLoginRequest {
    string username = 1;
    string password = 2;
}

message UserSigninResponse {
    string token = 3;
    google.protobuf.Timestamp token_timeout = 7;
    UserEntity user = 8;
}

message UserLogoutRequest {
    string username = 1;
    string token = 2;
}

message UserLogoutResponse {}

message UserPullRequest {
    string user_id = 1;
}

message UserEntity {
    string id = 1;
    string username = 2;
    uint32 user_type = 3;
    uint32 role = 14;
    string email = 4;
    
    string first_name = 20;
    string last_name = 21;
    string phone_number = 22;
    DOBEntity dob = 23;

    repeated uint32 contract_ids = 6 [packed=true];

    string insta_account = 7;
    uint32 insta_followers = 8;
    bool insta_verified = 9;

    string tiktok_account = 10;
    uint32 tiktok_followers = 11;
    bool tiktok_verified = 12;

    bool payment_setup = 13;

    bool admin_status = 15;
    bool profile_photo_uploaded = 16;

    string profile_photo_id = 17;
    ProfileImageEntity profile_photo = 18;

    bool stripe_connected = 24;
    StripeEntity stripe_info = 19;

    bool worker_requested = 25;
    bool buyer_requested = 26;
    bool worker_enabled = 27;
    bool buyer_enabled = 28;

    string default_fca = 29;

}

message DOBEntity {
    uint32 day = 1;
    uint32 month = 2;
    uint32 year = 3;
}
message ForgotRequest {
    string email = 1;
}

message ResetConfirmRequest {
    string reset_id = 1;
}

message ResetConfirmResponse {
    bool valid_id = 1;
}

message ChangePasswordRequest {
    string reset_id = 1;
    string new_password = 2;
}


service Auth{
    rpc Register(UserRegisterRequest) returns (UserSigninResponse) {};
    rpc Login(UserLoginRequest) returns (UserSigninResponse) {};
    rpc Logout(UserLogoutRequest) returns (UserLogoutResponse) {};
    rpc Pull(UserPullRequest) returns (UserEntity) {};

    rpc ForgotPassword(ForgotRequest) returns (NullResponse) {};
    rpc ConfirmResetId(ResetConfirmRequest) returns (ResetConfirmResponse) {};
    rpc ChangePassword(ChangePasswordRequest) returns (UserSigninResponse) {}
}